--- a/main.css
+++ b/main.css
@@ -7,3 +7,95 @@ body  {
 	font-family: Arial, sans-serif;
 	font-size: 16px;
 }
+
+/*.hero-image {
+	background-image: url("img/bord.jpg");
+	background-color: #CCC;
+	height: 250px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+}
+
+.hero-text {
+	text-align: left;
+	position: relative;
+	top: 35%;
+	margin-left: 140px;
+	transform: translate(-50%, -50%);
+	color: black;
+	background:rgba(255,255,255,0.5);
+	border-radius: 3px;
+	width: 254px;
+	padding: 0 6px;
+}*/
+
+#menu {
+	position: absolute;
+	top: 0;
+	left: 15%;
+	margin-top: 8px;
+	background-color: white;
+}
+
+#menu > ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+#menu > ul > li {
+	display: inline;
+	margin-right: 20px;
+	font-weight: bold;
+}
+
+li > a:hover {
+	color: grey;
+	text-decoration: underline;
+}
+
+li > a {
+	text-decoration: none;
+	color: black;
+}
+
+h1 {
+	margin-top: 75px;
+}
+
+h2, h3 {
+	margin: 24px 0 0 0;
+}
+
+p {
+	margin: 0;
+}
+
+#gafflar, 
+#knivar, 
+#skedar {
+
+}
+
+.productImage {
+	height: 200px;
+	width: 200px;
+	margin-left: 15px;
+	float: right;
+	border-radius: 10px;
+}
+
+.product {
+	clear: both;
+}
+footer {
+	margin: 50px 0;
+}
+
+footer > p {
+	font-size: 10px;
+	text-align: center;
+	color: grey;
+}
