--- a/main.css
+++ b/main.css
@@ -6,6 +6,13 @@ html {
 body  {
 	font-family: Arial, sans-serif;
 	font-size: 16px;
+	margin: 15%;
+}
+
+#content {
+	border-style: solid;
+	border-color: cyan;
+	padding: 15px;
 }
 
 /*.hero-image {
@@ -34,7 +41,7 @@ body  {
 #menu {
 	position: absolute;
 	top: 0;
-	left: 15%;
+	left: 16%;
 	margin-top: 8px;
 	background-color: white;
 }
@@ -63,6 +70,7 @@ li > a {
 
 h1 {
 	margin-top: 75px;
+	font-size: 50px;
 }
 
 h2, h3 {
