--- a/main.css
+++ b/main.css
@@ -55,7 +55,15 @@ body  {
 #menu > ul > li {
 	display: inline;
 	margin-right: 20px;
+	padding-right: 20px;
 	font-weight: bold;
+	font-size: 24px;
+	border-right: 2px solid black;
+	
+}
+
+#menu > ul > li:last-child {
+	border-right: none;
 }
 
 li > a:hover {
