--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
 	font-size: 18px;
 }
 
+
+
 body  {
 	font-family: Arial, sans-serif;
 	font-size: 18px;
@@ -38,10 +40,24 @@ body  {
 	padding: 0 6px;
 }*/
 
+#header {
+		position: absolute;
+	top: 40px;
+	left: 200px;
+	margin-top: 8px;
+	}
+	
+#headertvå {
+		position: absolute;
+	top: 29px;
+	left: 390px;
+	margin-top: 8px;
+	}
+	
 #menu {
 	position: absolute;
-	top: 0;
-	left: 16%;
+	top: 1px;
+	left: 200px;
 	margin-top: 8px;
 	background-color: white;
 }
