--- a/main.css
+++ b/main.css
@@ -42,16 +42,16 @@ body  {
 
 #header {
 		position: absolute;
-	top: 40px;
-	left: 200px;
-	margin-top: 8px;
+	top: 1%;
+	left: 10%;
+	margin-top: 2%;
 	}
 	
 #headertvå {
 	position: absolute;
-	top: 29px;
-	left: 390px;
-	margin-top: 8px;
+	top: 1%;
+	left: 20%;
+	margin-top: 1%;
 	}
 	
 #menu {
@@ -141,11 +141,17 @@ p {
 	clear: both;
 }
 footer {
-	margin: 50px 0;
+	background-color: grey;
+	width: 100%;
+	height: 1%;
 }
 
 footer > p {
-	font-size: 10px;
+	font-size: 30px;
 	text-align: center;
-	color: grey;
+}
+.container{
+	max-width:1920px;
+	min-width::780;
+	margin:0 auto;
 }
