--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 body  {
 	font-family: Arial, sans-serif;
 	font-size: 18px;
-	margin: 15%;
+	margin: 250px 15%;
 }
 
 #content {
@@ -140,15 +140,23 @@ p {
 	clear: both;
 }
 footer {
-	background-color: grey;
+	background-color: lightgrey;
 	width: 100%;
-	height: 1%;
+	height: 190px;
 }
 
 footer > p {
 	font-size: 30px;
 	text-align: center;
+	color: grey;
 }
+
+footer > hej {
+	color: red;
+	
+	
+	}
+
 .container{
 	max-width:1920px;
 	min-width::780;
