--- a/main.css
+++ b/main.css
@@ -71,7 +71,7 @@ body  {
 	margin-right: 20px;
 	padding-right: 20px;
 	font-weight: bold;
-	font-size: 24px;
+	font-size: 18px;
 	border-right: 2px solid black;
 }
 
@@ -140,7 +140,7 @@ p {
 	clear: both;
 }
 footer {
-	background-color: lightgrey;
+	background-color:#EEE;
 	width: 100%;
 	height: 190px;
 }
@@ -148,7 +148,7 @@ footer {
 footer > p {
 	font-size: 30px;
 	text-align: center;
-	color: grey;
+	color:#626262;
 }
 
 footer > hej {
