--- a/main.css
+++ b/main.css
@@ -39,10 +39,11 @@ body  {
 }*/
 
 #header {
-		position: absolute;
-	top: 1%;
-	left: 10%;
-	margin-top: 2%;
+	position: absolute;
+	top: 20px;
+	left: 15%;
+	margin-top: 30px;
+	display: inline-flex;
 	}
 	
 #headertvå {
@@ -55,7 +56,7 @@ body  {
 #menu {
 	position: absolute;
 	top: 1px;
-	left: 200px;
+	left: 15%;
 	margin-top: 8px;
 	background-color: white;
 }
@@ -139,10 +140,14 @@ p {
 .product {
 	clear: both;
 }
+
 footer {
 	background-color: lightgrey;
 	width: 100%;
 	height: 190px;
+	margin-top: 30px;
+	border-style: solid;
+	
 }
 
 footer > p {
