--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body  {
 	border-style: solid;
 	border-color: black;
 	padding: 15px;
+	padding-bottom: 
 }
 
 /*.hero-image {
@@ -41,30 +42,15 @@ body  {
 #header {
 	position: absolute;
 	top: 20px;
-	left: 15%;
+	left: 14%;
 	margin-top: 30px;
 	display: inline-flex;
-	}
-	
-#headertvå {
-	position: absolute;
-	top: 1%;
-	left: 22%;
-	margin-top: 1%;
 	}
 	
 #menu {
 	position: absolute;
 	top: 1px;
 	left: 15%;
-	margin-top: 8px;
-	background-color: white;
-}
-
-#menutvå {
-	position: absolute;
-	top: 10px;
-	left: 200px;
 	margin-top: 8px;
 	background-color: white;
 }
@@ -89,13 +75,7 @@ body  {
 }
 
 #owners {
-	float: right;
-	padding-left: 50px;
 	padding-bottom: 50px;
-}
-
-#owners > h2 {
-	margin-top: 0;
 }
 
 #owners > ul {
@@ -105,7 +85,7 @@ body  {
 }
 
 #owners > ul > li {
-	margin-top: 14px;
+	display: inline;
 }
 
 li > a:hover {
@@ -152,23 +132,17 @@ p {
 footer {
 	background-color:#EEE;
 	width: 100%;
-	height: 190px;
+	height: 95px;
 	margin-top: 30px;
 	border-style: solid;
 	
 }
 
 footer > p {
-	font-size: 30px;
 	text-align: center;
 	color:#626262;
+	margin: 15px;
 }
-
-footer > hej {
-	color: red;
-	
-	
-	}
 
 .container{
 	max-width:1920px;
