--- a/main.css
+++ b/main.css
@@ -100,7 +100,7 @@ p {
 footer {
 	background-color:#EEE;
 	width: 100%;
-	height: 95px;
+	height: 120px;
 	margin-top: 30px;
 	border-style: solid;
 	
@@ -109,5 +109,9 @@ footer {
 footer > p {
 	text-align: center;
 	color:#626262;
-	margin: 15px;
+	margin-top: 15px;
+}
+
+#swish {
+	margin-top: 5px;
 }
